update comment
